# InCommand

./: .gitignore  CMakeLists.txt  CODEOWNERS  DEFENSIVE_DISCLOSURE.md  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml
inc/: InCommand.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  InCommand.cpp
src/sample/: CMakeLists.txt  Sample.cpp
src/test/: CMakeLists.txt  InCommandTest.cpp
